<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">KorTellBurgerKing</string>
	<string name="full_name">KorTellBurgerKing v2.0.0 [3]</string>
	<string name="history_name">기록</string>
	<string name="settings_name">설정</string>
	<string name="copyright">Copyright ⓒ 2015-2017 by KENNYSOFT. All Rights Reserved.</string>

	<string name="ok">확인</string>
	<string name="cancel">취소</string>

	<string name="action_history">기록</string>
	<string name="action_settings">설정</string>

	<string name="start">시작</string>
	<string name="select_title">설문조사 코드를 선택하세요</string>

	<string name="error_title">오류</string>
	<string name="error_message">죄송합니다. 입력하신 정보로 설문조사를 진행할 수 없습니다. 다시 시도해 주십시오.</string>

	<string name="finish_title">확인 코드</string>

	<string name="history_surveyCode">설문조사 코드</string>
	<string name="history_validationCode">확인 코드</string>

	<string name="preference_information">정보</string>
	<string name="preference_opensource">오픈소스 라이선스</string>
	<string name="preference_update">업데이트 사항</string>
	<string name="preference_link">별점 및 리뷰</string>
	<string name="preference_setting">설정</string>
	<string name="preference_autoSelect">설문조사 코드 자동 선택</string>
	<string name="preference_autoSelect_summaryOn">바코드 인식 후 설문조사 코드의 15번째 자리를 랜덤하게 선택합니다. 확인코드에는 영향을 미치지 않습니다.</string>
	<string name="preference_autoSelect_summaryOff">바코드 인식 후 설문조사 코드의 15번째 자리로 가능한 10개의 리스트 중 하나를 선택하는 창을 띄웁니다.</string>

	<string name="information">
	<b>버거킹 무료 세트업그레이드를 쉽고 빠르게!</b>\n\n
	KENNYSOFT의 \"KorTellBurgerKing\" 앱은 자동 설문조사 코드 입력과 자동 설문조사를 지원하여 버거킹 무료 세트업그레이드를 간편하게 받을 수 있도록 도와드립니다.\n\n
	Copyright ⓒ 2015-2017 by KENNYSOFT. All Rights Reserved.
	</string>

	<string name="opensource">
	<b>KorTellBurgerKing</b>\n
	<i>https://github.com/KENNYSOFT/KorTellBurgerKing</i>\n\n
GNU GENERAL PUBLIC LICENSE Version 3\n\n
Copyright © 2015-2017 KENNYSOFT\n\n
This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\n
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.\n\n\n
	<b>zxing-android-embedded</b>\n
	<i>https://github.com/journeyapps/zxing-android-embedded</i>\n\n
Apache License Version 2.0\n\n
Copyright (C) 2012-2017 ZXing authors, Journey Mobile\n\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
&#160;&#160;&#160;&#160;http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n\n
	<b>Android Open Source Project</b>\n
	<i>http://source.android.com</i>\n\n
Apache License Version 2.0\n\n
Copyright (C) 2017 The Android Open Source Project\n\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
&#160;&#160;&#160;&#160;http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
	</string>

	<string name="update">
	<b>v2.0.0</b> [3] <i>(17.06.28)</i>\n
	* 바코드 인식을 통해 자동으로 설문조사 코드를 입력할 수 있는 기능을 추가하였습니다.\n
	&#160;&#160;# 바코드 인식 후 설문조사 코드의 15번째 자리를 랜덤하게 선택할지, 10개의 리스트 중 하나를 선택하는 창을 띄울지 설정할 수 있습니다.\n
	* 오픈소스 라이센스 표시를 추가하였습니다.\n\n
	<b>v1.0.1</b> [2] <i>(17.06.27)</i>\n
	* Android 7.0, 7.1 지원을 추가하였습니다.\n
	* Support Library v25.4.0을 사용하도록 변경하였습니다.\n
	* DB 구조를 일부 변경하였습니다.\n\n
	<b>v1.0.0</b> [1] <i>(15.08.29)</i>\n
	* 최초 릴리즈입니다.
	</string>

</resources>